--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bs4starter",
+  "name": "techshop",
   "version": "1.0.0",
   "description": "bootstrap 4 workflow",
   "main": "index.js",
